# myai-agent

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  RELEASE_v0.8.0.md  RELEASE_v0.9.0.md  SECURITY.md  cli-config.yaml.example  cli.py  constraints-termux.txt  flake.nix  hermes_logging.py  mcp_serve.py  model_tools.py  myai  myai_constants.py  myai_logging.py  myai_state.py  myai_time.py  pyproject.toml  rl_cli.py  run_agent.py  setup-myai.sh  toolsets.py  trajectory_compressor.py  utils.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  setup_help.yml
.github/workflows/: publish-pypi.yml  tests.yml
.plans/: openai-api-server.md  streaming-support.md
acp_adapter/: auth.py  entry.py  permissions.py  server.py  session.py  tools.py
acp_registry/: agent.json
agent/: anthropic_adapter.py  auxiliary_client.py  bedrock_adapter.py  context_engine.py  context_references.py  copilot_acp_client.py  credential_pool.py  display.py  gemini_cloudcode_adapter.py  google_code_assist.py  google_oauth.py  insights.py  memory_manager.py  memory_provider.py  model_metadata.py  models_dev.py  nous_rate_guard.py  prompt_builder.py  redact.py  skill_commands.py  skill_utils.py  smart_model_routing.py
cron/: __init__.py  jobs.py  scheduler.py
docker/: SOUL.md  entrypoint.sh
docs/: acp-setup.md  honcho-integration-spec.html  honcho-integration-spec.md
docs/migration/: openclaw.md
docs/plans/: 2026-03-16-pricing-accuracy-architecture-design.md  2026-04-01-ink-gateway-tui-migration-plan.md
docs/skins/: example-skin.yaml
environments/: tool_context.py
gateway/: __init__.py  channel_directory.py  config.py  delivery.py  hooks.py  mirror.py  pairing.py  restart.py  run.py  session.py  session_context.py  status.py  sticker_cache.py
gateway/builtin_hooks/: boot_md.py
myai_cli/: __init__.py  auth.py  auth_commands.py  backup.py  banner.py  callbacks.py  claw.py  cli_output.py  clipboard.py  colors.py  commands.py  completion.py  config.py  copilot_auth.py  cron.py  curses_ui.py  debug.py  default_soul.py  dingtalk_auth.py  doctor.py  dump.py  env_loader.py  gateway.py  logs.py  main.py  mcp_config.py  memory_setup.py  model_normalize.py  model_switch.py  models.py  nous_subscription.py  pairing.py  platforms.py  plugins.py  plugins_cmd.py  profiles.py  providers.py  runtime_provider.py  setup.py  skills_config.py  (+8 more)
myai_cli/inference/: myaione.py  myaione_bootstrap.py
myai_cli/providers/: myaione.py  myaione_bootstrap.py
nix/: checks.nix  devShell.nix  nixosModules.nix  packages.nix  tui.nix  web.nix
optional-skills/: DESCRIPTION.md
optional-skills/migration/: DESCRIPTION.md
packaging/homebrew/: README.md  hermes-agent.rb  myai-agent.rb
plans/: gemini-oauth-provider.md
plugins/: __init__.py
plugins/memory/: __init__.py
scripts/: build_skills_index.py  contributor_audit.py  discord-voice-doctor.py  install.cmd  install.ps1  install.sh  myai-gateway  release.py  run_tests.sh
scripts/lib/: node-bootstrap.sh
scripts/whatsapp-bridge/: bridge.js  package-lock.json  package.json
skills/dogfood/: SKILL.md
tests/: conftest.py  test_cli_skin_integration.py  test_empty_model_fallback.py  test_hermes_logging.py  test_ipv4_preference.py  test_mcp_serve.py  test_model_tools.py  test_myai_constants.py  test_myai_logging.py  test_myai_state.py  test_plugin_skills.py  test_project_metadata.py  test_subprocess_home_isolation.py  test_timezone.py  test_toolsets.py  test_trajectory_compressor.py  test_tui_gateway_server.py  test_utils_truthy_values.py
tests/acp/: test_auth.py  test_mcp_e2e.py  test_server.py  test_session.py
tests/agent/: test_auxiliary_client.py  test_auxiliary_config_bridge.py  test_auxiliary_named_custom_providers.py  test_bedrock_integration.py  test_context_compressor.py  test_context_engine.py  test_context_references.py  test_credential_pool.py  test_credential_pool_routing.py  test_display_emoji.py  test_external_skills.py  test_gemini_cloudcode.py  test_insights.py  test_local_stream_timeout.py  test_memory_provider.py  test_memory_user_id.py  test_minimax_provider.py  test_model_metadata_local_ctx.py  test_nous_rate_guard.py  test_prompt_builder.py  test_redact.py  test_skill_commands.py  test_smart_model_routing.py
tests/cli/: test_anthropic_oauth_flow.py  test_anthropic_provider_persistence.py  test_api_key_providers.py  test_argparse_flag_propagation.py  test_auth_codex_provider.py  test_auth_commands.py  test_auth_nous_provider.py  test_auth_provider_gate.py  test_auth_qwen_provider.py  test_aux_config.py  test_backup.py  test_banner.py  test_banner_git_state.py  test_branch_command.py  test_chat_skills_flag.py  test_claw.py  test_clear_stale_base_url.py  test_cli_approval_ui.py  test_cli_background_tui_refresh.py  test_cli_browser_connect.py  test_cli_context_warning.py  test_cli_copy_command.py  test_cli_extension_hooks.py  test_cli_image_command.py  test_cli_init.py  test_cli_loading_indicator.py  test_cli_mcp_config_watch.py  test_cli_new_session.py  test_cli_plan_command.py  test_cli_prefix_matching.py  test_cli_preloaded_skills.py  (+90 more)
tools/: __init__.py  approval.py  browser_camofox.py  browser_camofox_state.py  browser_tool.py  checkpoint_manager.py  code_execution_tool.py  credential_files.py  cronjob_tools.py  debug_helpers.py  delegate_tool.py  env_passthrough.py  file_operations.py  file_tools.py  image_generation_tool.py  interrupt.py  managed_tool_gateway.py  mcp_oauth.py  mcp_oauth_manager.py  mcp_tool.py  memory_tool.py  openrouter_client.py  process_registry.py  rl_training_tool.py  send_message_tool.py  session_search_tool.py  skill_manager_tool.py  skills_guard.py  skills_hub.py  skills_sync.py  skills_tool.py  terminal_tool.py  tirith_security.py  tool_backend_helpers.py  transcription_tools.py  tts_tool.py  vision_tools.py  voice_mode.py  web_tools.py  website_policy.py  (+1 more)
tui_gateway/: server.py  slash_worker.py
ui-tui/: README.md
web/: README.md  index.html  vite.config.ts
website/: docusaurus.config.ts  sidebars.ts
(+470 files in other folders)
